womtool/src/test/resources/validate/wdl_draft2/invalid/duplicate_task_names/error.txt
ERROR: Sibling nodes have conflicting names:

WdlTask defined here (line 10, col 6):

task HelloWorld{
     ^

WdlTask statement defined here (line 19, col 6):

task HelloWorld{
     ^
     
